# LightImpact-MM4R

./: LICENSE  LightImpact_MM4R  LightImpact_MM4R.py  README.md  pyproject.toml  setup.py
LightImpact-MM4R/WLTP data/: Time-Speed-Profile_WLTP_Class3b.csv
WLTP_data/: Time-Speed-Profile_WLTP_Class3b.csv
examples/: mm4r_case.py
lightimpact/: _init_.py  core.py
lightimpact.egg-info/: PKG-INFO  SOURCES.txt
