[project]
name = "lightimpact"
version = "0.1.1"
description = "A Python library for calculating Energy Reduction Values (ERVs) of lightweight automotive components in ICVs and EVs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"

authors = [
    { name = "Suzana Ostojic", email = "suzana.ostojic@inab.rwth-aachen.de" }
]

dependencies = [
    "numpy",
    "pandas"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"