[project]
name = "lightimpact"
version = "0.1.3"
description = "A Python library for calculating Energy Reduction Values (ERVs) of lightweight automotive components in ICVs and EVs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"

authors = [
    { name = "Suzana Ostojic", email = "suzana.ostojic@inab.rwth-aachen.de" }
]

dependencies = [
    "numpy",
    "pandas"
]

[project.urls]
"Homepage" = "https://pypi.org/project/lightimpact/"
"Source" = "https://github.com/suzanaostojic/LightImpact-MM4R"
"Issue Tracker" = "https://github.com/suzanaostojic/LightImpact-MM4R/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"